--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,9 @@ repositories {
 dependencies {
     compile 'org.scala-lang:scala-library:2.11.5'
     compile 'org.scala-lang:scala-compiler:2.11.5'
-
     compile 'com.twitter:finagle-httpx_2.11:6.24.0'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.4.3'
+    compile 'com.fasterxml.jackson.module:jackson-module-scala_2.11:2.4.4'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.scalatest:scalatest_2.11:2.2.4'
